# StaticInjection

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: arg_parser.cpp  arg_parser.hpp  main.cpp  pch.hpp  util.cpp  util.hpp
